apostila/atividades/awesome-social-media/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: awesome-social-media
  name: awesome-social-media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: awesome-social-media
  strategy: {}
  template:
    metadata:
      labels:
        app: awesome-social-media
    spec:
      containers:
      - image: ikauzak/awesomesocialmedia:v1.0.0
        name: awesome
        ports:
          - containerPort: 80
            protocol: TCP
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
