apostila/atividades/awesome-social-media/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: awesome-social-media
  name: awesome-social-media-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: awesome-social-media
