apostila/atividades/awesome-social-media/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: awesome-social-media-ingress
  annotations:
    cert-manager.io/cluster-issuer: main-issuer
    cert-manager.io/common-name: <MYAPP.MYDOMAIN.COM>
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: <MYAPP.MYDOMAIN.COM>
    http:
      paths:
      - backend:
          service:
            name: awesome-social-media-svc
            port: 
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - <MYAPP.MYDOMAIN.COM>
      secretName: myappcert
